--- a/index.html
+++ b/index.html
@@ -3,13 +3,129 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Recipe App</title>
-    <link rel="stylesheet" href="styles.css">
+    <meta name="description" content="Habiba is an aspiring software engineer based in Accra,Ghana">
+    <title>Jr Software Engineer - Habiba Adam</title>
+
+    <link rel="stylesheet" href="styles/styleres3.css" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
+      crossorigin="anonymous"
+    />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,400;1,500;1,600;1,700;1,800;1,900&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,400;1,500;1,600;1,700;1,800;1,900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;1,100;1,200;1,300;1,400;1,500&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet">
+     <link rel="preconnect" href="https://fonts.googleapis.com">
+
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+      crossorigin="anonymous">
+    </script>
+    <script src="https://kit.fontawesome.com/1e6364ae39.js" crossorigin="anonymous"></script>
+
 </head>
 <body>
-    <div id="root"></div>
-    <script src="https://unpkg.com/react@17/umd/react.development.js"></script>
-    <script src="https://unpkg.com/react-dom@17/umd/react-dom.development.js"></script>
-    <script src="app.js" type="module"></script>
+    <div class="container">
+    <nav class="d-flex justify-content-between">
+        <a href="index.html">
+        <img src="images/logo.png" alt="logo image" class="logo d-none d-md-block" title="Homepage">
+        <img src="images/logo-small.jpg" alt="logo small" class=" logo d-block d-md-none" title="Homepage">
+        </a>
+        <ul>
+            <li class="active">
+                <a href="index.html" title="Homepage">Home</a>
+            </li>
+            <li>
+                <a href="about.html" title="About page">About</a>
+            </li>
+            <li>
+                <a href="work.html" title="Work page">Works</a>
+            </li>
+            <li>
+                <a href="contact.html" title="Contact Page">Contact</a>
+            </li>
+        </ul>
+
+    </nav>
+</div>
+    <div class="container-main">
+    <p><i class="fa-solid fa-hands-bubbles"></i>Hello I am </p>
+    <h1>Habiba Adam</h1>
+    <h2 class="mb-5">Aspiring Jr Software Engineer based in Accra</h2>
+<div>
+    <a href="contact.html" class="btn btn-branding">Contact me</a>
+</div>
+    </div>
+    <p class="text-center mb-5 mt-5">Featured projects exhibiting all my best projects</p>
+
+    <div class="container">
+      <div class="row mb-5">
+        <div class="col d-none d-lg-block">
+          <img src="images/yog.png" class="img-fluid rounded">
+        </div>
+        <div class="col">
+          <div class="project-description ">
+          <h2 class="next mb-5">Yogurt Project</h2>
+          <p class="mb-5 text-muted">I entered the world of front-end development by gaining some knowledge in HTML, CSS, and JavaScript. I used my knowledge of these languages, along with my already existing skills in VS Code, to build a landing page about Yogurt. The page utilizes JavaScript functions to create user interaction.</p>
+          <a href="work.html" class="btn btn-branding-2" title="Yogurt App">Learn more</a>
+          </div>
+        </div>
+      </div>
+
+     <div class="row mb-5">
+      <div class="col">
+         <div class="project-description">
+          <h2 class="next mb-5">Weather App</h2>
+          <p class="mb-5 text-muted">I built a Vanilla JavaScript weather app in SheCodes Plus, an advanced 8-week JavaScript coding workshop. Building upon my previously-gained knowledge, I also became skilled in Bootstrap, API’s, real-life development workflow, hosting, and advanced JavaScript. I combined all of these skills to create a fully-functioning weather app.</p>
+          <a href="https://weather-bibi.netlify.app/" class="btn btn-branding-2" title="Weather app">Learn more</a>
+         </div>
+      </div>
+      <div class="col d-none d-lg-block">
+        <img src="images/weather.png" class="img-fluid rounded">
+     </div>
+
+
+        <div class="row mb-5">
+        <div class="col d-none d-lg-block">
+          <img src="images/dict.png" class="img-fluid rounded">
+        </div>
+        <div class="col">
+          <div class="project-description">
+          <h2 class="next mt-5 mb-5">Dictionary App</h2>
+          <p class="mb-5 text-muted">I immersed myself in React development in SheCodes React. I used my knowledge of this highly-demanded framework to build a working dictionary app incorporating coding best practices, along with the most popular tools and technologies.</p>
+          <a href="work.html" class="btn btn-branding-2" title="Dictionary app">Learn more</a>
+          </div>
+        </div>
+      </div>
+
+     <footer>
+        <div class="contact-box d-flex justify-content-between mb-5 d-none d-md-flex">
+            <div >
+                <h3>Work Inquiry</h3>
+                <p class="text-muted">Let's talk business here</p>
+            </div>
+
+            <div>
+            <a href="contact.html" class="btn btn-branding mt-3" title="Contact Habiba">Contact me</a>
+            </div>
+    </div>
+
+        <div class="d-flex justify-content-center mb-5">
+            <a href="mailto:habiepalmer@gmail.com" class="email-l">habiepalmer@gmail.com</a>
+        </div>
+
+        <div class="social-media text-center">
+        <a href="https://instagram.com/habibiadam34" target="_blank" title="Instagram Profile"><i class="fa-brands fa-instagram"></i></a>
+        <a href="https://github.com/habibaadam" target="_blank" title="Github Profile"><i class="fa-brands fa-github"></i></a>
+       <a href="https://twitter.com/habibi_jk" target="_blank" title="Twtitter Profile"><i class="fa-brands fa-x-twitter"></i></a>
+    </div>
+      <p class="text-center text-muted mt-5 mb-0">This project was coded by Habie🖤 and is <a href="https://github.com/habibaadam/portfolio-temp">open-sourced</a></p>
+    </footer>
+    </div>
+</div>
 </body>
 </html>
